--- a/index.html
+++ b/index.html
@@ -314,7 +314,7 @@
                 </section>
                 <section class="section">
                     <h1>博客</h1>
-                    <p>CSDN：<a href="https://blog.csdn.net/qq9694526" target="_blank">https://blog.csdn.net/qq9694526</a>
+                    <p>掘金专栏：<a href="https://juejin.im/user/5beea641e51d451f6e527f8a/posts" target="_blank">https://juejin.im/user/5beea641e51d451f6e527f8a/posts</a>
                     </p>
                     <p>博客园：<a href="https://www.cnblogs.com/qq9694526" target="_blank">https://www.cnblogs.com/qq9694526</a>
                     </p>
@@ -322,7 +322,7 @@
                 <section class="section">
                     <h1>计划2019</h1>
                     <p>1、学习react native，成为一名跨平台全栈攻城狮；</p>
-                    <p>2、坚持写博客，更好的沉淀知识与经验。</p>
+                    <p>2、修炼编程内功，坚持写博客，更好的沉淀知识与经验。</p>
                 </section>
                 <section class="section">
                     <h1>计划2018</h1>
