--- a/index.html
+++ b/index.html
@@ -3,9 +3,9 @@
 
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0, user-scalable=no"  />   
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>大吉大利晚上吃鸡</title>
+    <title>大吉大利今晚吃鸡</title>
     <style>
         /* http://meyerweb.com/eric/tools/css/reset/ */
         /* v1.0 | 20080212 */
@@ -86,7 +86,9 @@
             font-size: 62.5%;
             font-family: 'Source Sans Pro', 'Helvetica Neue', Arial, sans-serif;
         }
-
+        a {
+            word-break: break-all;
+        }
         ol,
         ul {
             list-style: none;
@@ -324,14 +326,12 @@
                 <section class="section">
                     <h1>简介</h1>
                     <p>一名
-                        <b>成熟、丰满、有理想</b>的web前端攻城狮。前端攻城5年，精通Javascript、Vue、Node、Solidity、微信小程序等。一直致力于Web技术的研究，擅长前端自动化、工程化，在前端跨栈进阶到
-                        Node.js 开发的编程道路上颇有心得。智能合约开发践行者。</p>
+                        <b>成熟、丰满、有理想</b>的web前端攻城狮。前端攻城5年，熟悉Html、Css、JavaScript(ES6)、Jquery、Vue、微信小程序，了解Node、Webpack、Nginx、Solidity。一直致力于Web技术的研究，擅长前端自动化、工程化，在前端跨栈进阶到Node.js 开发的编程道路上颇有心得。智能合约开发践行者。</p>
                     <!-- <p>座右铭：拥抱最新前端技术，打造极致用户体验。</p> -->
                 </section>
                 <section class="section">
                     <h1>技术栈</h1>
-                    <p>基础：html5,css3,ES6,solidity,小程序</br>
-                        预编译：less,scss</br>
+                    <p>基础：html5,css3,ES6,solidity,微信小程序</br>
                         UI框架：bootStrap,MUI,ElementUI,iView</br>
                         JS库：jQuery,requireJs,Swiper</br>
                         JS框架：Angular,React,Vue</br>
@@ -340,15 +340,15 @@
                     </p>
                 </section>
                 <section class="section">
-                    <h1>项目</h1>
-                    <p>所有开放源代码都可以在
-                        <a href="https://github.com/qq9694526">GitHub</a>
-                        上找到。</br>
+                    <h1>开源项目</h1>
+                    <p>正拓数字资产交易平台：<a href="https://gitee.com/ZTuo_FFFF" target="_blank">https://gitee.com/ZTuo_FFFF</a></p>
+                    <p>accurate-math：<a href="https://github.com/qq9694526/accurate-math" target="_blank">https://github.com/qq9694526/accurate-math</a></p>
+                    <p>所有开放源代码都可以在<a href="https://github.com/qq9694526" target="_blank">github</a>上找到。<br/>
                         如果对你有所帮助，记得star。</p>
                 </section>
                 <section class="section">
                     <h1>博客</h1>
-                    <p>掘金专栏：<a href="https://juejin.im/user/5beea641e51d451f6e527f8a/posts" target="_blank">https://juejin.im/user/5beea641e51d451f6e527f8a/posts</a>
+                    <p>掘金专栏：<a href="https://juejin.im/user/5beea641e51d451f6e527f8a/posts?sort=popular" target="_blank">https://juejin.im/user/5beea641e51d451f6e527f8a/posts?sort=popular</a>
                     </p>
                     <p>博客园：<a href="https://www.cnblogs.com/qq9694526" target="_blank">https://www.cnblogs.com/qq9694526</a>
                     </p>
